--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7,7 +7,6 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Chronojump</property>
     <property name="default_width">800</property>
-    <property name="default_height">600</property>
     <signal name="delete_event" handler="on_delete_event" swapped="no"/>
     <child>
       <widget class="GtkVBox" id="vbox69">
@@ -425,14 +424,15 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="show_tabs">False</property>
+            <property name="show_border">False</property>
             <child>
               <widget class="GtkAlignment" id="alignment10">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="top_padding">20</property>
-                <property name="bottom_padding">20</property>
-                <property name="left_padding">20</property>
-                <property name="right_padding">20</property>
+                <property name="top_padding">16</property>
+                <property name="bottom_padding">16</property>
+                <property name="left_padding">16</property>
+                <property name="right_padding">16</property>
                 <child>
                   <widget class="GtkVBox" id="vbox75">
                     <property name="visible">True</property>
@@ -442,7 +442,7 @@
                       <widget class="GtkAlignment" id="alignment31">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="bottom_padding">12</property>
+                        <property name="bottom_padding">10</property>
                         <child>
                           <widget class="GtkHBox" id="hbox121">
                             <property name="visible">True</property>
@@ -532,12 +532,12 @@
                           <widget class="GtkVBox" id="vbox77">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="spacing">20</property>
+                            <property name="spacing">16</property>
                             <child>
                               <widget class="GtkHBox" id="hbox122">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="spacing">20</property>
+                                <property name="spacing">16</property>
                                 <child>
                                   <widget class="GtkButton" id="button_selector_start_jumps">
                                     <property name="visible">True</property>
@@ -14839,17 +14839,6 @@ Evaluator can use real name or nickname.</property>
             <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkHBox" id="hbox27">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">2</property>
           </packing>
         </child>
       </widget>
